--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'azuki_font';
-  src: url('/azuki.ttf');
+  src: url('azuki.ttf');
   font-weight: normal;
   font-style: normal;
 }
